--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "botservice",
-  "version": "0.0.1",
-  "main": "./src/index.js",
+  "version": "2.0.0",
+  "description": "core lib for @zoomus/chatbot-cli",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config  ./jest.config.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "zoom",
+    "chatbot"
+  ],
+  "author": "fox.jiang",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "babel-jest": "^25.1.0",
+    "babel-plugin-rewire": "^1.2.0",
+    "eslint": "^5.16.0",
+    "jest": "^25.1.0",
+    "rewire": "^4.0.1",
+    "supertest": "^4.0.2"
+  },
   "dependencies": {
-    "@hapi/joi": "^15.1.1",
-    "@zoomus/chatbot": "^0.3.12",
-    "date-fns": "^2.0.1",
-    "es6-template-strings": "^2.0.1",
-    "querystring": "^0.2.0",
-    "request": "^2.88.0",
-    "uuid": "^3.3.3"
+    "fs-extra": "^8.1.0",
+    "ramda": "^0.26.1",
+    "@zoomus/chatbot": "^1.0.3"
   }
 }
